k8s/eks/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <NAMESPACE>   # ex.: togglemaster
